visibility of results fixed

--- a/style.css
+++ b/style.css
@@ -142,6 +142,8 @@ input[id="gluten"]:checked + label span {
 	height: 100px;
 	width: 40%;
 	font-size: 300%;
+	visibility: hidden;
+	transition: all 1s;
 }
 
 #dairyArea {
@@ -151,5 +153,7 @@ input[id="gluten"]:checked + label span {
 	height: 100px;
 	width: 40%;
 	font-size: 300%;
+	visibility: hidden;
+	transition: all 1s;
 }
 
